@@ -318,14 +318,23 @@ public class MSecurityManager extends SecurityManager {
      * @throws IllegalStateException
      */
     public void apply() throws IllegalStateException {
+
         try {
             System.setSecurityManager(this);
         } catch (SecurityException e) {
-            // this should never happen in EvoSuite, ie this object should be created just once
             logger.error("Cannot instantiate mock security manager", e);
             throw new IllegalStateException(e);
+        } catch (UnsupportedOperationException e) {
+            // Since JDK 18 (JEP 411), the JVM must be started with
+            // -Djava.security.manager=allow for this to succeed. If that flag
+            // was not passed, we degrade gracefully here instead of crashing:
+            // sandboxing is disabled for this run only.
+            logger.warn("SecurityManager could not be installed (JVM was not started with " +
+                    "-Djava.security.manager=allow). EvoSuite sandbox protections are DISABLED for this run.", e);
+            return;
         }
     }
+
 
     /**
      * Note: an un-privileged thread would throw a security exception
@@ -1053,6 +1062,15 @@ public class MSecurityManager extends SecurityManager {
          * we need it for reflection
          */
         if (name.equals("reflectionFactoryAccess")) {
+            return true;
+        }
+
+        /*
+         * needed for java.lang.StackWalker.getInstance(StackWalker.Option.RETAIN_CLASS_REFERENCE),
+         * the JDK 9+ sanctioned replacement for the old sun.reflect.Reflection.getCallerClass();
+         * same category of risk as the other reflection permissions allowed above
+         */
+        if (name.equals("getStackWalkerWithClassReference")) {
             return true;
         }
 
